# HabitQuest-web

./: ARCHITECTURE.md  BUILD-MACOS.md  BUILD-PACKAGE.md  ENHANCED_NOTIFICATION_SYSTEM.md  INSTALLATION-GUIDE.md  LAYOUT_FIX_SUMMARY.md  NOTIFICATION_SYSTEM_README.md  PERFORMANCE_ANALYSIS_REPORT.md  PERFORMANCE_OPTIMIZATION.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  REFACTORING_SUMMARY.md  STORAGE_VALIDATION_REPORT.md  TRAY_AND_NOTIFICATION_FIXES.md  UI_UPDATE_SUMMARY.md  VERSION_REPLACEMENT_GUIDE.md  WINDOWS_NOTIFICATION_FIXES.md  build-and-package.ps1  build-package.bat  clean-all-cache.bat  clean-all-cache.ps1  debug_habitquest.bat  eslint.config.js  notification-test.html  notification_debug.html  package-lock.json  package.json  reinstall_habitquest.bat  tailwind.config.js  tauri.conf.json  test_notifications.ps1  tsconfig.app.json  verify_notifications.bat  vite.config.ts
.github/workflows/: README.md  build-macos.yml  build-packages.yml  ci-dev.yml  ci.yml  cross-platform-build.yml  linux-build.yml  macos-build.yml  production-release.yml  release.yml  windows-build.yml
HabitQuest-v3.2.0.1-RenKaiStudios-Windows-x64/: INSTALLATION-GUIDE.md  README.md
HabitQuest-v3.2.0.1-RenKaiStudios-Windows-x64/Documentation/: INSTALLATION.md  STORAGE_IMPROVEMENTS.md
icons/: habitquest-icon.icns
scripts/: manage-habitquest-versions.ps1  performance-test.js
src/: App.tsx  App_backup.tsx  App_clean.tsx  App_optimized.tsx  REFACTORING_SUMMARY.md  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  notifications.json
src-tauri/src/: background_notifications.rs  lib.rs  main.rs
src/components/: AnimatedBackground.tsx  SettingsPage.tsx
src/constants/: index.ts
(+103 files in other folders)
