[package]
name = "habitquest"
version = "4.1.2"
description = "Gamified habit tracking application"
authors = ["RenKaiStudios"]
license = "MIT"
repository = "https://github.com/Rensjo/HabitQuest-web"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "habitquest"
path = "src/main.rs"

[lib]
name = "habitquest_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = [] }
tauri-plugin-log = "2"
